--- a/src/HashTable/CMakeLists.txt
+++ b/src/HashTable/CMakeLists.txt
@@ -1,1 +1,2 @@
-add_library(hashTable hashTable.cpp hashTable.h)
+add_library(hashTable hashTable.h)
+SET_TARGET_PROPERTIES(hashTable PROPERTIES LINKER_LANGUAGE CXX)
