--- a/app/package.json
+++ b/app/package.json
@@ -1,13 +1,15 @@
 {
-  "name": "playground",
+  "name": "FIFA21-Players",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/react-router-dom": "^5.3.3",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "4.0.2",
     "sass": "^1.49.11",
     "typeface-roboto": "^1.1.13",
