--- a/app/package.json
+++ b/app/package.json
@@ -7,11 +7,13 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/react-router-dom": "^5.3.3",
+    "@types/styled-components": "^5.1.25",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "4.0.2",
     "sass": "^1.49.11",
+    "styled-components": "^5.3.5",
     "typeface-roboto": "^1.1.13",
     "typescript": "^4.1.2"
   },
