feat: tagsSearch view

--- a/app/package.json
+++ b/app/package.json
@@ -10,6 +10,7 @@
     "@types/styled-components": "^5.1.25",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-icons": "^4.3.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "4.0.2",
     "sass": "^1.49.11",
